--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "cytoscape": "~2.3.8",
     "d3": "~3.5.3",
     "jquery": "~2.1.3",
-    "jstat": "~1.1.2"
+    "jstat": "~1.1.2",
+    "canvg": "~1.3.0"
   }
 }
