--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,6 @@
     "cytoscape": "~2.3.8",
     "d3": "~3.5.3",
     "jquery": "~2.1.3",
-    "jstat": "~1.1.2",
-    "canvg": "~1.3.0"
+    "jstat": "~1.1.2"
   }
 }
