--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "jquery": "~2.1.3",
     "jstat": "~1.1.2",
     "cytoscape-qtip": "~2.0.1",
-    "qtip2": "~2.2.1"
+    "qtip2": "~2.2.1",
+    "jQuery-contextMenu": "~1.6.7"
   }
 }
