dev package target

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -4,8 +4,12 @@ CLOSURE_COMPILER_JAR = ~/git/closure-compiler/build/compiler.jar
 COMPILATION_LEVEL = SIMPLE_OPTIMIZATIONS
 #COMPILATION_LEVEL = ADVANCED_OPTIMIZATIONS
 
+BOWER_DIR=../bower_components
+
 #SCRIPTS= ../bower_components/jquery/dist/jquery.min.js ../bower_components/jQuery-contextMenu/src/jquery.contextMenu.js ../bower_components/jstat/dist/jstat.min.js ../bower_components/d3/d3.min.js utils.js eventData.js graphData.js medbook_data_load.js circleMapGenerator.js circleMapGraph.js
-SCRIPTS= utils.js
+
+#SCRIPTS=$(BOWER_DIR)/jquery/dist/jquery.js $(BOWER_DIR)/jQuery-contextMenu/src/jquery.contextMenu.js $(BOWER_DIR)/d3/d3.js $(BOWER_DIR)/jstat/dist/jstat.js utils.js eventData.js graphData.js medbook_data_load.js circleMapGenerator.js circleMapGraph.js
+SCRIPTS=$(BOWER_DIR)/jQuery-contextMenu/src/jquery.contextMenu.js $(BOWER_DIR)/d3/d3.js $(BOWER_DIR)/jstat/dist/jstat.js utils.js eventData.js graphData.js medbook_data_load.js circleMapGenerator.js circleMapGraph.js
 
 test:
 
@@ -17,8 +21,19 @@ circleMapGraph_package.js:
 	java -jar $(CLOSURE_COMPILER_JAR) --compilation_level $(COMPILATION_LEVEL) --js_output_file=$@ $(SCRIPTS) ;
 
 circleMapGraph_package_dev.js:
-	cat $(SCRIPTS) \
-	> 1.tmp ;
+	rm -f 1.tmp ;
+	\
+	for script in $(SCRIPTS) ; do \
+		cat $${script} \
+		>> 1.tmp ; \
+		\
+		echo " // end of $${script}" \
+		>> 1.tmp ; \
+		\
+		echo " // end of $${script}" \
+		>> 1.tmp ; \
+		\
+	done ; \
 	\
 	mv 1.tmp $@ ;
 	\
