--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -9,7 +9,7 @@ BOWER_DIR=../bower_components
 #SCRIPTS= ../bower_components/jquery/dist/jquery.min.js ../bower_components/jQuery-contextMenu/src/jquery.contextMenu.js ../bower_components/jstat/dist/jstat.min.js ../bower_components/d3/d3.min.js utils.js eventData.js graphData.js medbook_data_load.js circleMapGenerator.js circleMapGraph.js
 
 #SCRIPTS=$(BOWER_DIR)/jquery/dist/jquery.js $(BOWER_DIR)/jQuery-contextMenu/src/jquery.contextMenu.js $(BOWER_DIR)/d3/d3.js $(BOWER_DIR)/jstat/dist/jstat.js utils.js eventData.js graphData.js medbook_data_load.js circleMapGenerator.js circleMapGraph.js
-SCRIPTS=$(BOWER_DIR)/jstat/dist/jstat.js utils.js eventData.js graphData.js medbook_data_load.js circleMapGenerator.js circleMapGraph.js
+SCRIPTS=$(BOWER_DIR)/webcola/WebCola/cola.min.js $(BOWER_DIR)/jstat/dist/jstat.js utils.js eventData.js graphData.js medbook_data_load.js circleMapGenerator.js circleMapGraph.js
 
 test:
 
